# cdemonchy

./: README.md  _config.yml  justfile
.github/workflows/: build-blog-push-to-s3.yml  build-push-to-s3.yml  build-resume-push-to-s3.yml
_data/: education.yml  experience.yml  projects.yml
_includes/: projects.yml
_layouts/: default.html
blog/website/: docusaurus.config.js  package-lock.json  package.json  siteConfig.js
blog/website/blog/: 2018-08-28-kubernetes-cronjob-part-1.md  2018-08-28-kubernetes-cronjob-part-1.mdx  2019-02-07-python-packaging.md  2019-02-07-python-packaging.mdx  2019-09-03-kubernetes-cronjob-part-2.md  2019-09-03-kubernetes-cronjob-part-2.mdx  2021-01-25-airflow-2.0-on-docker-compose.md  2021-01-25-airflow-2.0-on-docker-compose.mdx  2023-02-10-clean-aws-organization-part-1-sso-access.md  2023-02-10-clean-aws-organization-part-1-sso-access.mdx  2023-02-10-clean-aws-organization-part-2-enforce-tag-policy.md  2023-02-10-clean-aws-organization-part-3-budget-and-cost-reports.md  2023-02-13-clean-aws-organization-part-2-enforce-tag-policy.mdx  2023-02-14-clean-aws-organization-part-3-budget-and-cost-reports.mdx  2023-09-25-publishing-this-blog.mdx  authors.yml
blog/website/static/: index.html
resume/: .gitignore  Cargo.toml  Dockerfile  README.md  TLCresume.sty  _config.yml  askama.toml  docker-compose.yml  resume.tex  update.py
resume/_layouts/: default.html
resume/assets/: main.scss
resume/src/: askama_struct.rs  main.rs  naive_date_format.rs  resume.xml  xml_struct.rs  yaml_struct.rs
resume/templates/: resume.tex
(+1 files in other folders)
