[package]
name = "resume"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
enum_str = "0.1.2"
serde =  { version = "1.0.228", features = ["derive"] }
serde-enum-str = "0.4.0"
serde-xml-rs = "0.8.2"
serde_with = "3.16.1"
serde_yaml_ng = "0.10.0"
url = { version = "2", features = ["serde"] }
