[package]
name = "resume"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
chrono = "0.4.42"
enum_str = "0.1.2"
regex = "1.12.2"
serde =  { version = "1.0.228", features = ["derive"] }
serde-email = "3.2.0"
serde-enum-str = "0.4.0"
serde-xml-rs = "0.8.2"
serde_with = "3.16.1"
serde_yaml_ng = "0.10.0"
thirtyfour = { version = "0.36.0"}
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
url = { version = "2", features = ["serde"] }

selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }

[lints.clippy]
pedantic = "deny"
